Tue Feb  3 15:23:58 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (remove_method): When remove refined
	  method, raise a NameError if the method is not
	  defined in refined class.

	  But if the method is defined in refined class,
	  it should keep refined method and remove original
	  method.

	  Patch by Seiei Higa. [ruby-core:67722] [Bug #10765]

Tue Feb  3 14:04:47 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): obtain real name with FindFirstFile API
	  instead of matchin all entries, on Windows.
	  [ruby-core:67954] [Bug #10819]

Tue Feb  3 12:26:35 2015  Katsuhiko Nishimra  <ktns.87@gmail.com>

	* lib/mkmf.rb (configuration): set the default cxxflags, which is
	  referred from the default CXXFLAGS, for extension libraries.
	  [Fix GH-823]

Tue Feb  3 05:52:00 2015  Aman Gupta <ruby@tmm1.net>

	* gc.c (rb_objspace_free): cause rb_bug if lazy sweep is in progress
	  during rb_objspace_free. Adds extra protection for r46340.
	  Patch by Vicent Marti. [Bug #10768] [ruby-core:67734]
	* gc.c (rb_objspace_call_finalizer): Ensure GC is completed after
	  finalizers have run. We already call gc_rest() before invoking
	  finalizers, but finalizer can allocate new objects and start new GC
	  cycle, so we call gc_rest() again after finalizers are complete.

Mon Feb  2 10:51:34 2015  Ari Pollak  <ajp@aripollak.com>

	* doc/security.rdoc (Symbols): update about Symbol GC.  Symbols
	  explicitly converted from Strings now can be collected, but
	  reflection/metaprogramming still can cause memory flooding.
	  [Fix GH-725]

Sun Feb  1 13:46:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (bin-comm): drop batch file installation.
	  Windows 95 support has not been supported already.
	  [Feature #10806]

Sat Jan 31 12:06:23 2015  Scott Francis  <scott.francis@shopify.com>

	* thread_pthread.c (reserve_stack): fix intermittent SIGBUS on
	  Linux, by reserving the stack virtual address space at process